@@ -1,3 +1,8 @@
+2019-10-18  Tom Tromey  <tom@tromey.com>
+
+	* gdb.texinfo (Maintenance Commands): Document new maint
+	commands.
+
 2019-10-07  Tom de Vries  <tdevries@suse.de>
 
 	* gdb.texinfo: Fix typo.
